JGlideMon ChangeLog

Version 0.8.1
-------------
- Added some extra debugging features, namely Help->Generate Debug Info,
  and File->Configuration->General->Log Debugging Info. Logs are also
  saved to Log.txt
- Added config options for the screenshot updater's buffer
  size and the timeout for updating a screenshot

Version 0.8
-----------
- Added support for a tray icon and minimizing to the tray
  if Java 1.6+ is installed (JGlideMon will still function
  with Java 1.5+, there just won't be a tray icon)
- Removed the need for a textfield to have focus to send keys
  in the screenshot tab. Now keys are sent as long as the
  screenshot tab is the current tab. Note that you are not able
  to send the 4 arrow keys as this would cause you to change
  the selected tab. Use WASD instead. Note that the Screenshot
  tab must still have focus, that is on most systems a dotted border
  appears around the word Screenshot on the actual tab.
- Added some code to try to help cope with when the screenshot
  fails to update. This is still a work in progress.
- Removed dependency on lib/componentset.jar, you may delete this
  file manually if you wish, though it won't harm anything if it
  remains. This library was 500kb and I was only using 2 features
  that I was able to replicate myself.

Version 0.7
-----------
- Fixed connection issues with non-Windows operating systems

Version 0.6
-----------
- Added support for loading profiles. Run Profiler.jar on the
  computer where Glider is running to create a "profiles.dat"
  file and copy that file to the same directory as JGlideMon.jar
  on the remote computer you will run JGlideMon on. JGlideMon will
  detect profiles.dat and read it into a list of profiles that
  can be loaded. (The whole point of this is so you don't have
  to remember the exact paths of all your profiles or type them
  in manually, but that option is available if you wish)
- Added the removal of timestamps from in-game chat timestamp mods